Fix slider content alignment

--- a/src/components/Slider/KeenSlider.scss
+++ b/src/components/Slider/KeenSlider.scss
@@ -30,6 +30,7 @@
 		&-content {
 			display: flex;
 			align-items: center;
+			height: 100%;
 
 			> div {
 				width: 100%;
