--- a/src/themes/Mikings/Slider/Slider.scss
+++ b/src/themes/Mikings/Slider/Slider.scss
@@ -26,6 +26,10 @@
 					padding-bottom: 0;
 				}
 			}
+			&-with-progress-bar p {
+				margin: 13px 0 16px;
+				padding: 0;
+			}
 		}
 	}
 
