--- a/src/themes/UseOfFunds/FundsModal.scss
+++ b/src/themes/UseOfFunds/FundsModal.scss
@@ -14,7 +14,7 @@
 
 	opacity: 0;
 	transform: scale( 1.1 );
-	transition: opacity 200ms ease-in-out, transform 300ms ease-in-out;
+	transition: opacity 200ms ease-in-out, transform 300ms ease-in-out, visibility 300ms ease-in-out;
 
 	* {
 		box-sizing: border-box;
